update lib
